# SepsisLINDT

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  README.md  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/get_predict/: CompactEnsemble.cpp  CompactRegressionTree.cpp  get_predict.cpp  get_predict_data.cpp  get_predict_initialize.cpp  get_predict_terminate.cpp  main.cpp  predictOneWithCache.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp
app/src/main/cpp/get_predict/include/: CompactEnsemble.h  CompactRegressionTree.h  get_predict.h  get_predict_data.h  get_predict_initialize.h  get_predict_terminate.h  get_predict_types.h  main.h  predictOneWithCache.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h
app/src/main/cpp/get_result/: derive_hr.c  fft.c  find_baseline.c  get_result.c  get_result_data.c  get_result_emxAPI.c  get_result_emxutil.c  get_result_initialize.c  get_result_rtwutil.c  get_result_terminate.c  interp1.c  main.c  pchip.c  quantile.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
app/src/main/cpp/get_result/include/: derive_hr.h  fft.h  find_baseline.h  get_result.h  get_result_data.h  get_result_emxAPI.h  get_result_emxutil.h  get_result_initialize.h  get_result_rtwutil.h  get_result_terminate.h  get_result_types.h  interp1.h  main.h  pchip.h  quantile.h  rtGetInf.h  rtGetNaN.h  (+3 more)
app/src/main/res/layout/: activity_audio.xml  activity_camera.xml  activity_info.xml  activity_login.xml  activity_main.xml  activity_measure.xml  activity_result.xml
app/src/main/res/values/: strings.xml
(+75 files in other folders)
